[gd_scene load_steps=15 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Meteoritos/Advertencia.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juego/Meteoritos/Advertencia.ogg" type="AudioStream" id=4]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0, -540 )
b = Vector2( 0, 540 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 0, -540 )
b = Vector2( 0, 540 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 960, 0 )
b = Vector2( -960, 0 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 960, 0 )
b = Vector2( -960, 0 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 0, -900 )
b = Vector2( 0, 900 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 0, -900 )
b = Vector2( 0, 900 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -1400, 0 )
b = Vector2( 1400, 0 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( -1400, 0 )
b = Vector2( 1400, 0 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=10]
resource_name = "advertencia"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.988281, 0.988281, 0.988281, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AdvetenciaSFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AdvetenciaSFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, -50.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Label:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("SpawnTimer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Borde_Nave_Player" type="Node2D" parent="."]

[node name="Borde_Izuierdo" type="StaticBody2D" parent="Borde_Nave_Player"]
position = Vector2( -960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borde_Nave_Player/Borde_Izuierdo"]
shape = SubResource( 1 )

[node name="Borde_Derecho" type="StaticBody2D" parent="Borde_Nave_Player"]
position = Vector2( 960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borde_Nave_Player/Borde_Derecho"]
shape = SubResource( 2 )

[node name="Borde_Arriba" type="StaticBody2D" parent="Borde_Nave_Player"]
position = Vector2( 0, -540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borde_Nave_Player/Borde_Arriba"]
shape = SubResource( 3 )

[node name="Borde_Abajo" type="StaticBody2D" parent="Borde_Nave_Player"]
position = Vector2( 0, 540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borde_Nave_Player/Borde_Abajo"]
shape = SubResource( 4 )

[node name="Detector_Fuera_Zona" type="Node2D" parent="."]

[node name="Detector_Izquierda" type="Area2D" parent="Detector_Fuera_Zona"]
position = Vector2( -1400, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_Fuera_Zona/Detector_Izquierda"]
shape = SubResource( 5 )

[node name="Detector_Derecha" type="Area2D" parent="Detector_Fuera_Zona"]
position = Vector2( 1400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_Fuera_Zona/Detector_Derecha"]
shape = SubResource( 6 )

[node name="Detector_Arriba" type="Area2D" parent="Detector_Fuera_Zona"]
position = Vector2( 0, -900 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_Fuera_Zona/Detector_Arriba"]
shape = SubResource( 7 )

[node name="Detector_Abajo" type="Area2D" parent="Detector_Fuera_Zona"]
position = Vector2( 0, 900 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_Fuera_Zona/Detector_Abajo"]
shape = SubResource( 8 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )
direccion = Vector2( 2, 0 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )
direccion = Vector2( -2, 0 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )
direccion = Vector2( 0, 1 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )
direccion = Vector2( 0, -1 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -720 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 720 )
direccion = Vector2( -2, -1 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 720 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -720 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, -720 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, 720 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, 720 )
direccion = Vector2( -2, -1 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, -720 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -360 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 360 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -360 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 360 )
direccion = Vector2( -2, -1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0.494141, 0.494141, 0.494141, 0.5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.847059, 0.27451, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.5
margin_top = -46.5
margin_right = 430.5
margin_bottom = 46.5
custom_fonts/font = SubResource( 9 )
text = "Â¡ADVENTENCIA!
LLUVIA DE METEORITOS INMINENTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvetenciaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "advertencia"
anims/advertencia = SubResource( 10 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
